Fix tests & bump test dependency versions